--- a/project.html
+++ b/project.html
@@ -1180,6 +1180,7 @@
                     </script>
                 </div>
                 <p class="story">Like World Population Review site, it also has countermeasures for direct scraping so I used the same method</p>
+                <a href="https://colab.research.google.com/drive/1wjjylW7gp8o17tfOe0Lls7lxwgwxpG5U#scrollTo=y-luaO3GycEa">Colab</a>
             </li>
             <li>
                 <strong>Education Level</strong>
