unify manual download story

--- a/project.html
+++ b/project.html
@@ -1034,7 +1034,6 @@
                 </div>
 
                 <div class="story">
-                    <p>This data is downloaded from World Population Review then uploaded to my github because they are using methods to counter scraping (JavaScript generated tables)</p>
                     <a href="https://colab.research.google.com/drive/1EBiZTkZqFleqTZ60Q0ZmyaAi1owmJkeh#scrollTo=tW66oXGJxaEa">Colab</a>
                 </div>
             </li>
@@ -1188,7 +1187,6 @@
                     </script>
                 </div>
                 <div class="story">
-                    <p class="story">Like World Population Review site, it also has countermeasures for direct scraping so I used the same method</p>
                     <a href="https://colab.research.google.com/drive/1wjjylW7gp8o17tfOe0Lls7lxwgwxpG5U#scrollTo=y-luaO3GycEa">Colab</a>
                 </div>
             </li>
@@ -1343,7 +1341,7 @@
                     </script>
                 </div>
                 <div class="story">
-                    <p class="story">This was from the same site as the age data, so I had to download the csv manually and scrape it from my github</p>
+                    <p>The source of race, age and education appears to have countermeasures for direct scraping so I had to use the download csv feature and upload them to github, from there I scraped the data on Colab</p>
                     <a href="https://colab.research.google.com/drive/1TcP77Xr0UUP5kfGebijQPD0pmYRy7dAU#scrollTo=IhxC6jKcwoqD">Colab</a>
                 </div>
             </li>
