unify manual download story 2

--- a/project.html
+++ b/project.html
@@ -1341,7 +1341,7 @@
                     </script>
                 </div>
                 <div class="story">
-                    <p>The source of race, age and education appears to have countermeasures for direct scraping so I had to use the download csv feature and upload them to github, from there I scraped the data on Colab</p>
+                    <p>The source websites of race, age and education appears to have countermeasures for direct scraping so I had to use the download csv feature and upload them to github, from there I scraped the data on Colab</p>
                     <a href="https://colab.research.google.com/drive/1TcP77Xr0UUP5kfGebijQPD0pmYRy7dAU#scrollTo=IhxC6jKcwoqD">Colab</a>
                 </div>
             </li>
