--- a/project.html
+++ b/project.html
@@ -598,7 +598,7 @@
                 </div>
 
                 <div class="story">
-                    <p class="story">Scraped from state income from FRED using pandas read_html() but it has an extra header that I have to remove, was able to remove it by overwriting columns and a dropcolumn and after that I merged the state data with the CDC data for state vaccination coverage</p>
+                    <p class="story">Scraped state income data from FRED using pandas read_html() and merged with CDC data for state vaccination coverage</p>
                     <a href="https://colab.research.google.com/drive/1ckgmtUQNMXnnCNcWojBjv5kEIZIQQjVm#scrollTo=MRA2Hn6xmNvl">Colab</a>
                 </div>
             </li>
@@ -883,7 +883,7 @@
                     </script>
                 </div>
                 <div class="story">
-                    <p class="story">Used pandas to scrape the table from Pew Research and then merged with the CDC data for state vaccination coverage </p>
+                    <p class="story">Used pandas to scrape data from Pew Research and then merged with the CDC data for state vaccination coverage</p>
                     <a href="https://colab.research.google.com/drive/1x16jGHavaTqau7-62I1am7iaIxELeSXe?usp=sharing">Colab</a>
                 </div>
             </li>
@@ -1341,7 +1341,7 @@
                     </script>
                 </div>
                 <div class="story">
-                    <p>The source websites of race, age and education appears to have countermeasures for direct scraping so I had to use the download csv feature and upload them to github, from there I scraped the data on Colab</p>
+                    <p>The data for ‘Black Population’, ‘Young Population’ and ‘Education’ were downloaded from World Population Review, which used JavaScript generated tables to counter data scraping.</p>
                     <a href="https://colab.research.google.com/drive/1TcP77Xr0UUP5kfGebijQPD0pmYRy7dAU#scrollTo=IhxC6jKcwoqD">Colab</a>
                 </div>
             </li>
