--- a/project.html
+++ b/project.html
@@ -597,7 +597,7 @@
                     </script>
                 </div>
 
-                <div class="story">
+                <div class="story colab">
                     <p class="story">Scraped state income data from FRED using pandas read_html() and merged with CDC data for state vaccination coverage</p>
                     <a href="https://colab.research.google.com/drive/1ckgmtUQNMXnnCNcWojBjv5kEIZIQQjVm#scrollTo=MRA2Hn6xmNvl">Colab</a>
                 </div>
@@ -882,7 +882,7 @@
                     }
                     </script>
                 </div>
-                <div class="story">
+                <div class="story colab">
                     <p class="story">Used pandas to scrape data from Pew Research and then merged with the CDC data for state vaccination coverage</p>
                     <a href="https://colab.research.google.com/drive/1x16jGHavaTqau7-62I1am7iaIxELeSXe?usp=sharing">Colab</a>
                 </div>
@@ -1033,7 +1033,7 @@
                     </script>
                 </div>
 
-                <div class="story">
+                <div class="colab">
                     <a href="https://colab.research.google.com/drive/1EBiZTkZqFleqTZ60Q0ZmyaAi1owmJkeh#scrollTo=tW66oXGJxaEa">Colab</a>
                 </div>
             </li>
@@ -1186,7 +1186,7 @@
                     }
                     </script>
                 </div>
-                <div class="story">
+                <div class="colab">
                     <a href="https://colab.research.google.com/drive/1wjjylW7gp8o17tfOe0Lls7lxwgwxpG5U#scrollTo=y-luaO3GycEa">Colab</a>
                 </div>
             </li>
@@ -1340,7 +1340,7 @@
                     }
                     </script>
                 </div>
-                <div class="story">
+                <div class="story colab">
                     <p>The data for ‘Black Population’, ‘Young Population’ and ‘Education’ were downloaded from World Population Review, which used JavaScript generated tables to counter data scraping.</p>
                     <a href="https://colab.research.google.com/drive/1TcP77Xr0UUP5kfGebijQPD0pmYRy7dAU#scrollTo=IhxC6jKcwoqD">Colab</a>
                 </div>
